# trading_bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.md
CMake/: cotire.cmake
configs/: coinApi.config  static_config.json
configs/coinapi/: coinio_currencies.json  coinio_exchanges.json
lib/: CMakeLists.txt
lib/include/: APIKey.h  Account.h  CMCHistory.h  CMCandleStick.h  CandlePeriod.h  Candlestick.h  CoinAPI.h  CoinAPIHistory.h  CoinAPITick.h  CoinMarketCap.h  Controller.h  Currency.h  CurrencyEnums.h  CurrencyPair.h  DataTypes.h  Database.h  Enums.h  ExchangeAccounts.h  ExchangeEnums.h  Globals.h  Market.h  Order.h  OrderBook.h  Quote.h  Tick.h  TickPeriod.h  TradeHistory.h  TraderBot.h  dbMetadata.h  dbServer.h
lib/include/exchanges/: Exchange.h  GDAX.h  Gemini.h  VirtualExchange.h
lib/include/indicators/: DiscreteIndicator.h  EMA.h  MA.h  MACD.h  RSI.h  SMA.h  STDDEV.h  TEMA.h
lib/include/tradeAlgos/: LimitOrderAlgo.h  MarketOrderAlgo.h  TradeAlgo.h
lib/include/triggers/: CandleTrigger.h  IntervalTrigger.h  TickTrigger.h  Trigger.h
lib/include/utils/: Argument.h  ConcurrentQueue.h  EncodeDecode.h  ErrorHandling.h  JsonUtils.h  Logger.h  RestAPI2JSON.h  StringUtils.h  TimeUtils.h  TraderUtils.h  Volume.h  Websocket2JSON.h  dbUtils.h
lib/src/: Account.cpp  Arguments.cpp  CMCHistory.cpp  CMCandleStick.cpp  CandlePeriod.cpp  Candlestick.cpp  CoinAPI.cpp  CoinAPIHistory.cpp  CoinAPITick.cpp  CoinMarketCap.cpp  Controller.cpp  Currency.cpp  Database.cpp  ExchangeAccounts.cpp  IncludeAlgo.cpp  Order.cpp  Tick.cpp  TickPeriod.cpp  TradeHistory.cpp  TraderBot.cpp  dbServer.cpp
lib/src/exchanges/: Exchange.cpp  GDAX.cpp  Gemini.cpp  VirtualExchange.cpp
lib/src/indicators/: MA.cpp
lib/src/tradeAlgos/: LimitOrderAlgo.cpp  MarketOrderAlgo.cpp  TradeAlgo.cpp
lib/src/triggers/: CandleTrigger.cpp  IntervalTrigger.cpp  TickTrigger.cpp
lib/src/utils/: RestAPI2JSON.cpp  StringUtils.cpp  TimeUtils.cpp  TraderUtils.cpp  Websocket2JSON.cpp  dbUtils.cpp
python/: gdax_websocket.py  gemini_websocket.py  parse_coinio.py
tests/: BasicTest.cpp  CoinAPITest.cpp  DatabaseTest.cpp  ExchangeTest.cpp  IndicatorTest.cpp  LoadCSVTest.cpp  SimulatorTest.cpp  TimeUtilsTest.cpp  WebsocketTest.cpp  test_driver.pl
tests/files/controller/limit/: limit_algo_both.json  limit_algo_real.json  limit_algo_real_sim.json  limit_algo_simulation.json
tests/files/controller/market/: market_algo_both.json  market_algo_real.json  market_algo_real_sim.json  market_algo_simulation.json
tests/files/csvData/COINBASE/: BTC-USD.csv
tests/files/csvData/COINMARKETCAP/BTC/: 2017.csv
tests/files/extractCSVData/: getCoinMarketCapData.txt  getGDAXData.txt
